--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-slate-800">
   <div class="page">
     <div class="content">
-      <h1>Digital</h1>
+      <h1>Digital Page</h1>
       <br>
       <h1>Artificial Intelligence Driving<br /> Results For The Travel Industry </h1>
       <h5>Welcome back! Please login to your account.</h5>
